--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "babel-node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -25,7 +25,9 @@
   "dependencies": {
     "babel-cli": "^6.24.1",
     "babel-preset-env": "^1.6.0",
+    "chai": "^4.1.1",
     "express": "^4.15.3",
-    "linebot": "^1.3.0"
+    "linebot": "^1.3.0",
+    "mocha": "^3.5.0"
   }
 }
